base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: todo-app
    namespace: gitops-todo
spec:
    replicas: 1
    selector:
        matchLabels:
            app: todo-app
    template:
        metadata:
            labels:
                app: todo-app
        spec:
            containers:
                -   name: todo-app
                    image: dhinojosa/gitops-todo:latest
                    ports:
                        -   containerPort: 3000
